test/spec_vectors/table_grow/ok/module_5.wat
(module $Tgt (table (export "table") 1 funcref) (func (export "grow") (result i32) (table.grow (ref.null func) (i32.const 1))))